task 3rd person, proj stat

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "According to the Collatz Conjecture, all numbers will end with 1 before going into another loop of 4,2,1 (Honner, 2020, Stack Overflow, n.d., Sao, 2021). Hence, the strategy is to stop the While loop at 1 (w3schools, n.d.).\n",
     "\n",
-    "I used Python Functions (W3 Schools, 2019) and While loop (w3schools, n.d.) for the conditions on odd and even numbers. Python list append method was used to keep adding on to the list until it reaches 1 (www.w3schools.com, n.d.)."
+    "Python Functions (W3 Schools, 2019) and While loop (w3schools, n.d.) were used for the conditions on odd and even numbers. Python list append method was used to keep adding on to the list until it reaches 1 (www.w3schools.com, n.d.)."
    ]
   },
   {
@@ -71,7 +71,7 @@
    "source": [
     "Python For Loop For i in Range was used (Thompson, 2021) to determine the limit, with if, else conditions (W3Schools, 2019, GeeksforGeeks, 2017) to verify that the last number in the list (Stack Overflow, n.d.) is 1.\n",
     "\n",
-    "Lastly, I called the verify_collatz function and printed out the verification/nonverification statement."
+    "Lastly, the verify_collatz function was called and printed out the verification/nonverification statement."
    ]
   },
   {
@@ -157,7 +157,7 @@
    "source": [
     "### Methods and Implementation\n",
     "\n",
-    "First, I imported the numpy library for computational operations and pandas library for data processing."
+    "First, numpy library for computational operations and pandas library for data processing were imported."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The famous penguins data set (Waskom, 2022, Pandey, 2020) was used. After importing the penguins.csv data set (datatofish.com, 2023), I ran df.head to show a few lines of the data frame."
+    "The famous penguins data set (Waskom, 2022, Pandey, 2020) was used. After importing the penguins.csv data set (datatofish.com, 2023), df.head was executed to show a few lines of the data frame."
    ]
   },
   {
@@ -337,9 +337,9 @@
     "\n",
     "While the output showed that the data frame consists of columns containing objects and floats, a quick lookover of the data file shows that the flipper length and body mass are int values. My question was, why did these columns output as floats? \n",
     "\n",
-    "I checked each numerical column by row using df.at (w3resource, 2022a) and isinstance function (www.w3schools.com, n.d.) to confirm that these column variables are not int values. \n",
+    "Each numerical column was checked by row using df.at (w3resource, 2022a) and isinstance function (www.w3schools.com, n.d.) to confirm that these column variables are not integer values. \n",
     "\n",
-    "Then I used For loops (W3Schools, 2019) and df.astype (pandas.pydata.org to numeric, n.d.) and pandas categorical data (pandas.pydata.org Categorical, n.d., pandas.pydata.org Series.cat.ordered, n.d.) to print out the categories of columns with string values."
+    "Then, For loops (W3Schools, 2019), df.astype (pandas.pydata.org to numeric, n.d.) andpandas categorical data (pandas.pydata.org Categorical, n.d., pandas.pydata.org Series.cat.ordered, n.d.) were used to print out the categories of columns with string values."
    ]
   },
   {
@@ -375,7 +375,7 @@
    "source": [
     "The output shows that the flipper length and body mass are not int values. \n",
     "\n",
-    "To check if the numeric columns contain int values and the object columns contain string values, I used a For loop (W3Schools, 2019), exception handling (Satyam, 2020, Python Tutorial - Master, n.d., van de Klundert, n.d.), and df.astype (pandas.pydata.org to numeric, n.d.) to confirm that these are all floats by confirming that these cannot be converted into integers. "
+    "To check if the numeric columns contain int values and the object columns contain string values, For loop (W3Schools, 2019), exception handling (Satyam, 2020, Python Tutorial - Master, n.d., van de Klundert, n.d.), and df.astype (pandas.pydata.org to numeric, n.d.) were used to confirm that these are all floats by confirming that these cannot be converted into integers. "
    ]
   },
   {
@@ -534,8 +534,7 @@
    "source": [
     "### Methods and Implementation\n",
     "\n",
-    "First, I imported the numpy library for computational operations, pandas library for data processing, matplotlib and seaborn for data plotting and distfit for probability density fitting.\n",
-    "\n"
+    "First, numpy library for computational operations, pandas library for data processing, matplotlib and seaborn for data plotting and distfit for probability density fitting were imported."
    ]
   },
   {
@@ -555,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After importing the penguins RAW data (Waskom, 2022), I performed df.info to look at the datatype of each variable (w3resource info(), 2022)."
+    "After importing the penguins RAW data (Waskom, 2022), df.info was performed to look at the datatype of each variable (w3resource info(), 2022)."
    ]
   },
   {
@@ -606,9 +605,9 @@
     "\n",
     "Probability distributions only apply on numerical columns bill_length_mm, bill_depth_mm, flipper_length_mm and body_mass_g.\n",
     "\n",
-    "For each variable, I plotted a histogram and plot (seaborn.pydata.org histplot, n.d.) and try to compare each with the list of probability distributions available (numpy.org Random Generator, n.d., www.w3schools.com Random Data Distribution, n.d.).\n",
+    "For each variable, a histogram and distribution plot (seaborn.pydata.org histplot, n.d.) were generated and compared each with the list of probability distributions available (numpy.org Random Generator, n.d., www.w3schools.com Random Data Distribution, n.d.).\n",
     "\n",
-    "Using the python package distfit, I performed a goodness of fit testing to get the best fitting of a probability distribution to a series of data in each variable (Onnen, 2021, Raoniar, 2022, Mayo, 2022, Malloy, 2023, docs.scipy.org goodness_of_fit , n.d.).\n",
+    "Using the python package distfit, a goodness of fit testing was performed to get the best fitting of a probability distribution to a series of data in each variable (Onnen, 2021, Raoniar, 2022, Mayo, 2022, Malloy, 2023, docs.scipy.org goodness_of_fit , n.d.).\n",
     "\n",
     "The distribution with the lowest RSS and matching the plot is selected as the most appropriate to model each variable."
    ]
@@ -1034,7 +1033,7 @@
    "source": [
     "##### FOR COLUMNS SPECIES, ISLAND AND SEX:\n",
     "\n",
-    "To visualize categorical data species, island and sex, I generated seaborn countplots acording to Waskom (2012)."
+    "To visualize categorical data species, island and sex, seaborn countplots were generated according to Waskom (2012)."
    ]
   },
   {
@@ -1150,7 +1149,7 @@
    "source": [
     "### Methods and Implementation\n",
     "\n",
-    "First, I imported numpy for arrays and random numbers (numpy.org numpy.array, n.d.), matplotlib for plots (matplotlib.org pyplot , n.d.) and scipy stats entropy function to calculate entropy values (docs.scipy.org entropy, n.d.)."
+    "First, numpy for arrays and random numbers (numpy.org numpy.array, n.d.), matplotlib for plots (matplotlib.org pyplot , n.d.) and scipy stats entropy function to calculate entropy values (docs.scipy.org entropy, n.d.) were imported."
    ]
   },
   {
@@ -1168,7 +1167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I used random binomial (Numpy.org random.binomial , 2021) because the probability is only either head or tails."
+    "Random binomial (Numpy.org random.binomial , 2021) was used because the probability is only either head or tail."
    ]
   },
   {
@@ -1243,7 +1242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, I created a plot to visualize the probabilities (matplotlib.org pyplot , n.d.)."
+    "Then, a plot was created to visualize the probabilities according to Matplotlib.org pyplot (n.d.)."
    ]
   },
   {
@@ -1283,7 +1282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I defined a function to calculate the entropy using def (Chris, 2022), and used the return statement (GeeksforGeeks, 2019) to end the execution of the function calculate_entropy with values probabilities (getting head only, head and tail, and tail only) and base 2."
+    "A function to calculate the entropy was defined using def (Chris, 2022), and the return statement (GeeksforGeeks, 2019) was used to end the execution of the function calculate_entropy with values probabilities (getting head only, head and tail, and tail only) and base 2."
    ]
   },
   {
@@ -1303,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, I generated the values for p using numpy linspace to return 500 evenly spaced numbers between 0 and 1 (numpy.org linspace, n.d.)."
+    "Then, the values for p using numpy linspace to return 500 evenly spaced numbers between 0 and 1 were generated (numpy.org linspace, n.d.)."
    ]
   },
   {
@@ -1432,7 +1431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following that, I calculated the entropy for each p value (docs.scipy.org entropy, n.d.)."
+    "Following that, the entropy was calculated for each p value (docs.scipy.org entropy, n.d.)."
    ]
   },
   {
@@ -1961,7 +1960,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, I generated a plot for entropy of the total number of heads VS probability of getting heads (matplotlib.org pyplot , n.d.)."
+    "Finally, a plot for entropy of the total number of heads VS probability of getting heads was generated (matplotlib.org pyplot , n.d.)."
    ]
   },
   {
@@ -2041,7 +2040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After importing pandas (data loading), seaborn (statistical graphics) and matplotlib.pyplot (data visualization), I loaded the data and called it df."
+    "After pandas (data loading), seaborn (statistical graphics) and matplotlib.pyplot (data visualization) were imported, the data was imported and called df."
    ]
   },
   {
@@ -2059,11 +2058,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, I set the style  of the plot to have tick marks on the axes. \n",
+    "First, the style  of the plot was set to have tick marks on the axes. \n",
     "\n",
-    "Then, I used for loop (W3Schools, 2019b) to go through each column of the df. I used Python conditions if, else (W3Schools, 2019a) to differentiate between numerical and categorical datatypes. Pandas dtype was used to specify the datatypes of each column.\n",
+    "Then, For loop (W3Schools, 2019b) was used to go through each column of the df. Python conditions if, else (W3Schools, 2019a) was used to differentiate between numerical and categorical datatypes. Pandas dtype was used to specify the datatypes of each column.\n",
     "\n",
-    "Then, I generated the plots using seaborn histplot for numerical data (Waskom, 2012b) and seaborn countplot for categorical data (Waskom, 2012a). To customize the figure and axes, I referred to Matplotlib.org (n.d.), GeeksforGeeks (2021) and Waskom (2013)."
+    "Then, the plots were generated using seaborn histplot for numerical data (Waskom, 2012b) and seaborn countplot for categorical data (Waskom, 2012a). Matplotlib.org (n.d.), GeeksforGeeks (2021) and Waskom (2013) were used as reference to customize the figure and axes."
    ]
   },
   {
