--- a/project.ipynb
+++ b/project.ipynb
@@ -247,18 +247,20 @@
     "\n",
     "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each, without missing values. The four attributes of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) are the independent variables used to determine or identify whether an Iris flower is one of three classes (Iris setosa, I. versicolor or I. virginica). in the dependent class column.\n",
     "\n",
-    "### 2.1 Classification of Variables\n",
+    "## 2.1 Classification of Variables\n",
     "\n",
     "> In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
     "\n",
-    "#### Columns 'sepal_length', 'sepal_width', 'petal_length' and 'petal_width'\n",
+    "### 2.1.1 Columns 'sepal_length', 'sepal_width', 'petal_length' and 'petal_width'\n",
     "\n",
-    "The four independent columns are 64-bit floating-point numbers. They are continuous data types, which is a type of quantitative data (Pramoditha, 2020). These values can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
+    "From the output, the four independent columns are 64-bit floating-point numbers. They are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
     "\n",
     "\n",
-    "#### Column 'class'\n",
+    "### 2.1.2 Column 'class'\n",
     "\n",
-    "From the output, the column class is an object. Objects are strings, which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). In this instance, it is a categorical data type, which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). A nominal categorical variable is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017).Columns class is a nominal categorical variable, so no probability distributions are applicable. \n",
+    "From the output, the column 'class' is an object. Objects are strings, which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). \n",
+    "\n",
+    "In this instance, it is a Categorical data type (non-numeric), which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). It is a Nominal categorical variable, which is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017). Because column 'class' is a nominal categorical variable, so no probability distributions are applicable. \n",
     "\n",
     "df.describe (Pandas.pydata.describe, n.d.) was then executed to generate basic statistical information of each column in the dataset, such as the mean and standard deviation."
    ]
@@ -737,13 +739,6 @@
     "formula\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
