--- a/project.ipynb
+++ b/project.ipynb
@@ -253,7 +253,27 @@
     "\n",
     "### 2.1.1 Columns 'sepal_length', 'sepal_width', 'petal_length' and 'petal_width'\n",
     "\n",
-    "From the output, the four independent columns are 64-bit floating-point numbers. They are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
+    "#### 2.1.1.1 float64\n",
+    "\n",
+    "From the output, the four independent columns are 64-bit floating-point numbers. These are also known as double precision floating-point, 64-bit IEEE-754 floating-point or double (Datacadamia - Data and Co, 2019). They occupy 64 bits in computer memory which allows large numbers to be stored (Wikipedia Contributors, 2019a). They use a floating radix point, which is a symbol that separates whole numbers or integers from fractions (Wikipedia Radix point, 2023). \n",
+    "\n",
+    "In mathematics, the 64-bit floating-point number represents real numbers with decimal points which provides high accuracy when performing calculations. While float64 is sufficient for most mathematical operations and storage, it has limitations in terms of accuracy due to rounding errors in infinitely large or small numbers (Beuzen, 2021). Some decimal numbers cannot be precisely represented in binary which leads to representation errors (Docs.python.org, n.d.). Higher precision formats such as 128-bit or 256-bit would remedy that to some extent, but even those would eventually reach their own restrictions.\n",
+    "\n",
+    "In statistics, 64-bit floating-point numbers are commonly used to represent continuous numerical data such as time, measurements and price. They are highly accurate and generally sufficient for statistical analysis and hypothesis testing. However, rounding errors would still apply when using float64, a finite value, to represent extremely small or large numbers.\n",
+    "\n",
+    "In computing, 64-bit floating-point numbers are used to represent real numbers in computing and are more space-efficient than higher precision formats such as 128-bit or 256-bit. A 64-bit floating-point number consists of a 1-bit sign, an 11-bit exponent, and a 52-bit fraction (Wikipedia Contributors, 2019a). It adheres to the IEEE 754 standard, which ensures powerful numerical computing, consistency and interoperability across different platforms and programming languages (ETHW, 2023). \n",
+    "\n",
+    "In Python, the float data type is typically implemented as a 64-bit floating-point number by default to represent real numbers. float64 provides a good balance between precision and performance in most applications, but it is not unlimited. Since many Python applications follow the IEEE 754 specification (Camperbot, 2019), such as NumPy (Numpy.org constants, n.d.), thus allowing compatibility when performing mathematical and statistical operations.\n",
+    "\n",
+    "#### 2.1.1.2 Continuous Data\n",
+    "\n",
+    "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
+    "\n",
+    "In mathematics\n",
+    "\n",
+    "In statistics\n",
+    "\n",
+    "In Python\n",
     "\n",
     "\n",
     "### 2.1.2 Column 'class'\n",
@@ -261,6 +281,12 @@
     "From the output, the column 'class' is an object. Objects are strings, which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). \n",
     "\n",
     "In this instance, it is a Categorical data type (non-numeric), which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). It is a Nominal categorical variable, which is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017). Because column 'class' is a nominal categorical variable, so no probability distributions are applicable. \n",
+    "\n",
+    "In mathematics\n",
+    "\n",
+    "In statistics\n",
+    "\n",
+    "In Python\n",
     "\n",
     "df.describe (Pandas.pydata.describe, n.d.) was then executed to generate basic statistical information of each column in the dataset, such as the mean and standard deviation."
    ]
