--- a/project.ipynb
+++ b/project.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "The problem of species differentiation within the genus Iris has long been discussed, especially between *I. versicolor* and *I. virginica* (Anderson, 1928, 1936). Molecular studies have been done to determine chromosomal numbers of different native and introduced Iris species as early as 1934 (Randolph, 1934). \n",
     "\n",
-    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locatins from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
+    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019c). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locatins from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
     "\n",
     "In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population. When coupled with phylogenetic studies which identifies the species and their closely-related species and common ancestors, it would become a powerful tool for taxonomists and researchers."
    ]
@@ -255,26 +255,29 @@
     "\n",
     "#### 2.1.1.1 float64\n",
     "\n",
-    "From the output, the four independent columns are 64-bit floating-point numbers. These are also known as double precision floating-point, 64-bit IEEE-754 floating-point or double (Datacadamia - Data and Co, 2019). They occupy 64 bits in computer memory which allows large numbers to be stored (Wikipedia Contributors, 2019a). They use a floating radix point, which is a symbol that separates whole numbers or integers from fractions (Wikipedia Radix point, 2023). \n",
+    "From the output, the four independent columns are 64-bit floating-point numbers. These are also known as double precision floating-point, 64-bit IEEE-754 floating-point or double (Datacadamia - Data and Co, 2019). They occupy 64 bits in computer memory which allows large numbers to be stored (Wikipedia Contributors, 2019b). They use a floating radix point, which is a symbol that separates whole numbers or integers from fractions (Wikipedia Radix point, 2023). \n",
     "\n",
     "In mathematics, the 64-bit floating-point number represents real numbers with decimal points which provides high accuracy when performing calculations. While float64 is sufficient for most mathematical operations and storage, it has limitations in terms of accuracy due to rounding errors in infinitely large or small numbers (Beuzen, 2021). Some decimal numbers cannot be precisely represented in binary which leads to representation errors (Docs.python.org, n.d.). Higher precision formats such as 128-bit or 256-bit would remedy that to some extent, but even those would eventually reach their own restrictions.\n",
     "\n",
     "In statistics, 64-bit floating-point numbers are commonly used to represent continuous numerical data such as time, measurements and price. They are highly accurate and generally sufficient for statistical analysis and hypothesis testing. However, rounding errors would still apply when using float64, a finite value, to represent extremely small or large numbers.\n",
     "\n",
-    "In computing, 64-bit floating-point numbers are used to represent real numbers in computing and are more space-efficient than higher precision formats such as 128-bit or 256-bit. A 64-bit floating-point number consists of a 1-bit sign, an 11-bit exponent, and a 52-bit fraction (Wikipedia Contributors, 2019a). It adheres to the IEEE 754 standard, which ensures powerful numerical computing, consistency and interoperability across different platforms and programming languages (ETHW, 2023). \n",
+    "In computing, 64-bit floating-point numbers are used to represent real numbers in computing and are more space-efficient than higher precision formats such as 128-bit or 256-bit. A 64-bit floating-point number consists of a 1-bit sign, an 11-bit exponent, and a 52-bit fraction (Wikipedia Contributors, 2019b). It adheres to the IEEE 754 standard, which ensures powerful numerical computing, consistency and interoperability across different platforms and programming languages (ETHW, 2023). \n",
     "\n",
     "In Python, the float data type is typically implemented as a 64-bit floating-point number by default to represent real numbers. float64 provides a good balance between precision and performance in most applications, but it is not unlimited. Since many Python applications follow the IEEE 754 specification (Camperbot, 2019), such as NumPy (Numpy.org constants, n.d.), thus allowing compatibility when performing mathematical and statistical operations.\n",
     "\n",
     "#### 2.1.1.2 Continuous Data\n",
     "\n",
-    "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
+    "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range, which is different from discrete data which can only have distint values (Zangre, 2023). These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions can only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
     "\n",
-    "In mathematics\n",
+    "In mathematics, continuous data is the fundamental to calculus (Wikipedia, 2020a). A real number is a number that can be used to quantify a one dimensional continuous amount (Wikipedia, 2020b). These real numbers are used as inputs in real functions (Wikipedia, 2022), and according to Wikipedia Contributors (2019a), the general form of function is:\n",
     "\n",
-    "In statistics\n",
+    "![Real Function](realfunction.png)\n",
     "\n",
-    "In Python\n",
+    "where f is the name of the function, D is the domain of the function, and R is the codomain of the function, which is the set of real numbers.\n",
     "\n",
+    "In statistics, continuous data often follows probability distributions and can be expressed as probability density functions  which describe all the possible values and the likelihood of these values occurring within a range.(Wikipedia Contributors, 2019d). Continuous data is commonly used in regression analysis, which studies the relationship between one or more independent variables and a dependent variable, as well as predictive modeling (AVcontentteam, 2020). Continuous data also provides more accuracy in observations to make statistical inferences (Minitab Blog Editor, n.d.). \n",
+    "\n",
+    "In Python, libraries like NumPy (Numpy.org, n.d.) and Pandas (Pandas.pydata.org, n.d.) provide robust tools for working with continuous data (GeeksforGeeks, 2021). Scikit-Learn provides tools for preprocessing, model training, and evaluation of models, often using continuous data in Python (Scikit-learn, 2019). The SciPy library in Python contains various statistical analysis and functions for various types of data, including continuous data (Scipy.org, 2019). \n",
     "\n",
     "### 2.1.2 Column 'class'\n",
     "\n",
