--- a/project.ipynb
+++ b/project.ipynb
@@ -244,7 +244,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each, without missing values. The four attributes of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) are the independent variables used to determine or identify whether an Iris flower is one of three classes (Iris setosa, I. versicolor or I. virginica). in the dependent class column.\n",
     "\n",
     "## 2.1 Classification of Variables\n",
@@ -281,15 +280,41 @@
     "\n",
     "### 2.1.2 Column 'class'\n",
     "\n",
-    "From the output, the column 'class' is an object. Objects are strings, which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). \n",
+    "#### 2.1.2.1 Object\n",
     "\n",
-    "In this instance, it is a Categorical data type (non-numeric), which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). It is a Nominal categorical variable, which is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017). Because column 'class' is a nominal categorical variable, so no probability distributions are applicable. \n",
+    "From the output, the column 'class' in the Iris dataset is an object. \n",
+    "\n",
+    "In mathematics and statistics, the object datatype allows representation of various categories and subcategories for mathematical operations and statistical analysis. These can include sets, numbers and functions, each with its own characteristic, behaviour, and mathematical representation (Wikipedia, 2023). \n",
+    "\n",
+    "Python language is object-oriented In Python (W3Schools, 2019a) that utilises objects and classes (GeeksforGeeks, 2016). \"Object datatype\" generally refers to the generic object type, which can represent any Python object, such as numbers (int, float, complex), lists, dictionaries, strings and boolean (Soklaski, 2021). These are types of classes which define a specific type of object (Silveira, 2022).\n",
+    "\n",
+    "#### 2.1.2.2 String\n",
+    "\n",
+    "In this Iris dataset, the objects are strings (setosa, virginica, versicolor), which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). \n",
+    "\n",
+    "In mathematics\n",
+    "\n",
+    "In statistics\n",
+    "\n",
+    "In Python, string is used to store characters, usually text (Soklaski, 2021). According to Docs.python.org (n.d.), Python uses UTF-8 (Unicode Transformation Format, and 8-bitto encode) to represent various characters in string. \n",
+    "\n",
+    "#### 2.1.2.3 Categorical Data\n",
+    "\n",
+    "In this instance, it is a Categorical data type (non-numeric), which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). It is a Nominal categorical variable, which is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017). Because column 'class' is a nominal categorical variable, so no probability distributions are applicable.   \n",
     "\n",
     "In mathematics\n",
     "\n",
     "In statistics\n",
     "\n",
     "In Python\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Summary Statistics\n",
     "\n",
     "df.describe (Pandas.pydata.describe, n.d.) was then executed to generate basic statistical information of each column in the dataset, such as the mean and standard deviation."
    ]
@@ -479,7 +504,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following that, Python package distfit (Taskesen, 2020a, 2020b) was used for hypothesis testing and to find the best probability distribution to model each variable, as shown in Malloy (2023), Mayo (2022) and Raoniar (2022)."
+    "Following that, Python package distfit (Taskesen, 2020a, 2020b) was used for hypothesis testing and to find the best probability distribution to model each variable, as shown in Malloy (2023), Mayo (2022) and Raoniar (2022).\n",
+    "\n",
+    "For loop (W3Schools, 2019b)"
    ]
   },
   {
@@ -777,24 +804,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.0 Analysis"
+    "## 2.3 Plots"
    ]
   },
   {
@@ -840,19 +853,24 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.0 Conclusion"
+    "## 3.0 Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n",
-    "\n",
-    "\n"
+    "## 4.0 References"
    ]
   },
   {
