--- a/project.ipynb
+++ b/project.ipynb
@@ -290,13 +290,11 @@
     "\n",
     "#### 2.1.2.2 String\n",
     "\n",
-    "In this Iris dataset, the objects are strings (setosa, virginica, versicolor), which is is a more specialized text data type compared to the generic object data type. Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). \n",
+    "Strings can be considered a form of categorical data type, particularly when they represent discrete categories or labels (Konkiewicz, 2020). It's main purpose is to store text (Wikipedia Contributors, 2018). In this Iris dataset, the objects are strings (setosa, virginica, versicolor), which is is a more specialized text data type compared to the generic object data type. \n",
     "\n",
-    "In mathematics\n",
+    "In mathematics and statistics, strings are often used to represent categorical data. It allows for data representation and manipulation in mathematical functions and column labeling in datasets (GeeksforGeeks, 2022). \n",
     "\n",
-    "In statistics\n",
-    "\n",
-    "In Python, string is used to store characters, usually text (Soklaski, 2021). According to Docs.python.org (n.d.), Python uses UTF-8 (Unicode Transformation Format, and 8-bitto encode) to represent various characters in string. \n",
+    "In Python, string is used to store characters, usually text (Soklaski, 2021). According to Docs.python.org (n.d.), Python uses UTF-8 (Unicode Transformation Format, and 8-bitto encode) to represent various characters in string. It allows for data representation in a form of text which is crucial for various programming applications. Strings in Python are immutable, meaning once created, it becomes permanent (Google Developers, n.d.).\n",
     "\n",
     "#### 2.1.2.3 Categorical Data\n",
     "\n",
